--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,16 @@
 .app {
-    background: white;
-    width: 512px;
-    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23); /* 그림자 */ 
-    margin: 0 auto; /* 페이지 중앙 정렬 */
-    margin-top: 4rem;
-  }
-  .title {
-    color: dodgerblue;
-  }
+    
+}
+.title{
+  color: #006BFF;
+  font-size: 20px;
+  margin: 15px;
+  letter-spacing: 3px;
+}
+.banner{
+  text-align: center;
+}
+.banner_image{
+  width: 100%;
+  margin-bottom: 10px;
+}
