--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
-.app {
-    
+html, body{
+  margin: 0;
+  padding: 0;
+  height: 100%;
 }
 .title{
   color: #006BFF;
@@ -7,10 +9,63 @@
   margin: 15px;
   letter-spacing: 3px;
 }
+
 .banner{
   text-align: center;
 }
 .banner_image{
   width: 100%;
   margin-bottom: 10px;
+}
+.tutorial_image{
+  width: 100%;
+}
+.eventText{
+  margin: 20px;
+  width: 110px;
+  color: aliceblue;
+  text-align: center;
+  background: rgb(255, 217, 0);
+  border-radius: 10px;
+}
+.menus{
+  margin: 0 auto;
+}
+.menu{
+  margin-top: 30px;  
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.menu_name{
+  text-align: left;
+  width: 150px;
+}
+.menu_arrow{
+  margin-top: 30px;
+  margin-left: 30px;
+}
+.menu_go{
+  color: aliceblue;
+  text-align: center;
+  font-size: 20px;
+  line-height: 60px;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background: #006BFF;
+  margin-top: 10px;
+  margin-left: 40px;
+}
+
+.footer{
+  position: fixed;
+  left: 0;
+  bottom:0px;
+  height:50px;
+  width:100%; 
+  background:rgb(218, 218, 218);
+  text-align: center;
+  line-height: 50px;
+  font-size: 12px;
 }
