--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,3 @@
-html, body{
-  margin: 0;
-  padding: 0;
-  height: 100%;
-}
 .title{
   color: #006BFF;
   font-size: 20px;
@@ -29,7 +24,7 @@ html, body{
   border-radius: 10px;
 }
 .menus{
-  margin: 0 auto;
+  min-height: 100%;
 }
 .menu{
   margin-top: 30px;  
@@ -59,13 +54,12 @@ html, body{
 }
 
 .footer{
-  position: fixed;
-  left: 0;
-  bottom:0px;
-  height:50px;
-  width:100%; 
-  background:rgb(218, 218, 218);
+  bottom: 0;
   text-align: center;
-  line-height: 50px;
-  font-size: 12px;
+  background: rgb(209, 209, 209);
+  width: 100%;
+}
+
+.LoginForm{
+  margin-top: 50%;
 }
