--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@ html, body{
 .eventText{
   margin: 20px;
   width: 110px;
-  color: aliceblue;
+  color: whitesmoke;
   text-align: center;
   background: rgb(255, 217, 0);
   border-radius: 10px;
