--- a/src/App.css
+++ b/src/App.css
@@ -92,3 +92,24 @@ html, body{
   background: #006BFF;
   margin-bottom: 80px;
 }
+.quiz_img{
+  margin-top: 10%;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+}
+.quiz_comment{
+  margin-top: 10%;
+  text-align: center;
+  font-size: 20px;
+}
+.quiz_hint{
+  color: whitesmoke;
+  margin-top: 30%;
+  text-align: center;
+  font-size: 10px;
+  background: #006BFF;
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
+}
