--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@ html, body{
 .eventText{
   margin: 20px;
   width: 110px;
-  color: whitesmoke;
+  color: white;
   text-align: center;
   background: rgb(255, 217, 0);
   border-radius: 10px;
@@ -112,4 +112,9 @@ html, body{
   height: 30px;
   line-height: 30px;
   text-align: center;
+}
+.agree{
+  color: rgb(158, 158, 158);
+  font-size: 10px;
+  text-align: right;
 }
